add 4bl variant of futura 68px
Signed-off-by: Aayush <aayush@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -134,7 +134,7 @@ $base-base-fonts-16: (
       62px:('d':p2b(3px,$lh)),
       64px:('d':p2b(2px,$lh)),
       66px:('d':p2b(2px,$lh)),
-      68px:('d':p2b(1px,$lh)),
+      68px:('d':p2b(1px,$lh), 4:p2b(9px,$lh)),
       70px:('d':p2b(0px,$lh)),
       72px:('d':p2b(0px,$lh)),
       ),
