--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -124,7 +124,7 @@ $base-base-fonts-16: (
       42px:('d':p2b(9px,$lh)),
       44px:('d':p2b(9px,$lh)),
       46px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
-      48px:('d':p2b(0px,$lh)),
+      48px:('d':p2b(0px,$lh), 3:p2b(8px,$lh)),
       50px:('d':p2b(15px,$lh)),
       52px:('d':p2b(15px,$lh)),
       54px:('d':p2b(14px,$lh)),
