add 3 baseline 52px futura-pt
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -126,7 +126,7 @@ $base-base-fonts-16: (
       46px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
       48px:('d':p2b(0px,$lh), 3:p2b(8px,$lh)),
       50px:('d':p2b(15px,$lh)),
-      52px:('d':p2b(15px,$lh)),
+      52px:('d':p2b(15px,$lh), 3:p2b(7px,$lh)),
       54px:('d':p2b(14px,$lh)),
       56px:('d':p2b(13px,$lh)),
       58px:('d':p2b(12px,$lh)),
