futura-pt 2 baseline 38px
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -119,7 +119,7 @@ $base-base-fonts-16: (
       32px:('d':p2b(14px,$lh)),
       34px:('d':p2b(13px,$lh)),
       36px:('d':p2b(12px,$lh)),
-      38px:('d':p2b(11px,$lh)),
+      38px:('d':p2b(11px,$lh), 2:p2b(3px,$lh)),
       40px:('d':p2b(10px,$lh)),
       42px:('d':p2b(9px,$lh)),
       44px:('d':p2b(9px,$lh)),
