--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -506,13 +506,13 @@ $base-base-fonts-16: (
     28px:('d':p2b(6px,$lh)),
     30px:('d':p2b(13px,$lh)),
     32px:('d':p2b(12px,$lh)),
-    34px:('d':p2b(11px,$lh)),
+    34px:('d':p2b(11px,$lh), 2:p2b(3px,$lh)),
     36px:('d':p2b(10px,$lh)),
     38px:('d':p2b(10px,$lh)),
     40px:('d':p2b(9px,$lh)),
     42px:('d':p2b(8px,$lh)),
     44px:('d':p2b(7px,$lh)),
-    45px:('d':p2b(15px,$lh)),
+    45px:('d':p2b(15px,$lh), 3:p2b(7px,$lh)),
     46px:('d':p2b(15px,$lh)),
     48px:('d':p2b(14px,$lh)),
     50px:('d':p2b(13px,$lh)),
