--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -260,7 +260,7 @@ $base-base-fonts-16: (
     16px:('d':p2b(11px,$lh), 1:p2b(5px, $lh), 1.5:p2b(15px, $lh)),
     17px:('d':p2b(10px,$lh)),
     18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh)),
+    20px:('d':p2b(9px,$lh), 1.5:p2b(5px,$lh)),
     22px:('d':p2b(9px,$lh)),
     24px:('d':p2b(8px,$lh)),
     25px:('d':p2b(8px,$lh)),
