add 2 line 30px myriad pro
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -504,7 +504,7 @@ $base-base-fonts-16: (
     24px:('d':p2b(7px,$lh)),
     26px:('d':p2b(7px,$lh)),
     28px:('d':p2b(6px,$lh)),
-    30px:('d':p2b(13px,$lh)),
+    30px:('d':p2b(13px,$lh), 2:p2b(5px,$lh)),
     32px:('d':p2b(12px,$lh)),
     34px:('d':p2b(11px,$lh), 2:p2b(3px,$lh)),
     36px:('d':p2b(10px,$lh)),
