add 112px myriad pro
Signed-off-by: Jason <jason@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -528,5 +528,6 @@ $base-base-fonts-16: (
     68px:('d':p2b(15px,$lh)),
     70px:('d':p2b(14px,$lh)),
     72px:('d':p2b(13px,$lh)),
+    112px:('d':p2b(6px,$lh)),
     )
   );
