--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -287,6 +287,7 @@ $base-base-fonts-16: (
     66px:('d':p2b(2px,$lh)),
     68px:('d':p2b(1px,$lh)),
     70px:('d':p2b(0px,$lh)),
+    88px:('d':p2b(2px,$lh)),
     111px:('d':p2b(10px,$lh))
     ),
   'lato': (
@@ -461,6 +462,7 @@ $base-base-fonts-16: (
       40px:('d':p2b(13px,$lh)),
       42px:('d':p2b(13px,$lh)),
       44px:('d':p2b(12px,$lh)),
+      45px:('d':p2b(4px,$lh)),
       46px:('d':p2b(3px,$lh), 3:p2b(11px,$lh)),
       48px:('d':p2b(3px,$lh)),
       50px:('d':p2b(2px,$lh)),
@@ -470,7 +472,8 @@ $base-base-fonts-16: (
       58px:('d':p2b(0px,$lh)),
       60px:('d':p2b(0px,$lh)),
       62px:('d':p2b(7px,$lh)),
-      64px:('d':p2b(7px,$lh), 4:p2b(15px,$lh))
+      64px:('d':p2b(7px,$lh), 4:p2b(15px,$lh)),
+      88px:('d':p2b(8px,$lh))
     ),
     'caveat': (
       12px:('d':p2b(4px,$lh)),
