roboto-45 baseline setting added
Signed-off-by: Aayush <aayush@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -274,6 +274,7 @@ $base-base-fonts-16: (
     40px:('d':p2b(11px,$lh)),
     42px:('d':p2b(10px,$lh)),
     44px:('d':p2b(9px,$lh)),
+    45px:('d':p2b(1px,$lh)),
     46px:('d':p2b(0px,$lh)),
     48px:('d':p2b(0px,$lh)),
     50px:('d':p2b(15px,$lh)),
