3 lines baseline setting added
Signed-off-by: Aayush <aayush@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -262,25 +262,25 @@ $base-base-fonts-16: (
     18px:('d':p2b(10px,$lh)),
     20px:('d':p2b(9px,$lh), 1.5:p2b(5px,$lh)),
     22px:('d':p2b(9px,$lh)),
-    24px:('d':p2b(8px,$lh)),
+    24px:('d':p2b(8px,$lh), 3:p2b(7px,$lh)),
     25px:('d':p2b(8px,$lh)),
     26px:('d':p2b(7px,$lh)),
     28px:('d':p2b(7px,$lh)),
     30px:('d':p2b(14px,$lh), 2:p2b(6px,$lh)),
     32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(12px,$lh)),
+    34px:('d':p2b(12px,$lh), 3:p2b(11px,$lh)),
     36px:('d':p2b(12px,$lh)),
     38px:('d':p2b(11px,$lh)),
     40px:('d':p2b(11px,$lh)),
     42px:('d':p2b(10px,$lh)),
     44px:('d':p2b(9px,$lh)),
-    45px:('d':p2b(1px,$lh)),
+    45px:('d':p2b(1px,$lh), 3:p2b(8px,$lh)),
     46px:('d':p2b(0px,$lh)),
     48px:('d':p2b(0px,$lh)),
     50px:('d':p2b(15px,$lh)),
     52px:('d':p2b(15px,$lh)),
     54px:('d':p2b(14px,$lh)),
-    56px:('d':p2b(13px,$lh)),
+    56px:('d':p2b(12px,$lh)),
     58px:('d':p2b(12px,$lh)),
     60px:('d':p2b(12px,$lh)),
     62px:('d':p2b(3px,$lh)),
@@ -463,7 +463,7 @@ $base-base-fonts-16: (
       40px:('d':p2b(13px,$lh)),
       42px:('d':p2b(13px,$lh)),
       44px:('d':p2b(12px,$lh)),
-      45px:('d':p2b(4px,$lh)),
+      45px:('d':p2b(4px,$lh), 3:p2b(12px,$lh)),
       46px:('d':p2b(3px,$lh), 3:p2b(11px,$lh)),
       48px:('d':p2b(3px,$lh)),
       50px:('d':p2b(2px,$lh)),
