--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -269,7 +269,7 @@ $base-base-fonts-16: (
     30px:('d':p2b(14px,$lh), 2:p2b(6px,$lh)),
     32px:('d':p2b(13px,$lh)),
     34px:('d':p2b(12px,$lh), 3:p2b(11px,$lh)),
-    36px:('d':p2b(12px,$lh)),
+    36px:('d':p2b(12px,$lh), 2:p2b(4px,$lh)),
     38px:('d':p2b(11px,$lh)),
     40px:('d':p2b(11px,$lh)),
     42px:('d':p2b(10px,$lh)),
@@ -280,7 +280,7 @@ $base-base-fonts-16: (
     50px:('d':p2b(15px,$lh)),
     52px:('d':p2b(15px,$lh)),
     54px:('d':p2b(14px,$lh)),
-    56px:('d':p2b(11px,$lh)),
+    56px:('d':p2b(13px,$lh)),
     58px:('d':p2b(12px,$lh)),
     60px:('d':p2b(12px,$lh)),
     62px:('d':p2b(3px,$lh)),
