adding font settings for line hieght 24px for 14px, 16px and 20px nimbus-sans-condensed
Signed-off-by: Aayush <aayush@dashmedia.com.au>

--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -537,10 +537,10 @@ $base-base-fonts-16: (
     ),
     'nimbus-sans-condensed':(
     12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(12px,$lh)),
-    16px:('d':p2b(11px,$lh)),
+    14px:('d':p2b(12px,$lh), 1.5:p2b(0px,$lh)),
+    16px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
     18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(10px,$lh)),
+    20px:('d':p2b(10px,$lh), 1.5:p2b(14px,$lh)),
     22px:('d':p2b(9px,$lh)),
     24px:('d':p2b(8px,$lh)),
     26px:('d':p2b(8px,$lh)),
