--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -144,7 +144,7 @@ $base-base-fonts-16: (
       16px:('d':p2b(11px,$lh)),
       17px:('d':p2b(10px,$lh)),
       18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(9px,$lh)),
+      20px:('d':p2b(9px,$lh), 1.5:p2b(13px,$lh)),
       21px:('d':p2b(9px,$lh)),
       22px:('d':p2b(9px,$lh)),
       24px:('d':p2b(8px,$lh)),
@@ -565,7 +565,7 @@ $base-base-fonts-16: (
     62px:('d':p2b(4px,$lh)),
     64px:('d':p2b(3px,$lh)),
     65px:('d':p2b(3px,$lh)),
-    66px:('d':p2b(2px,$lh)),
+    66px:('d':p2b(2px,$lh), 4:p2b(10px,$lh)),
     68px:('d':p2b(1px,$lh)),
     70px:('d':p2b(1px,$lh)),
     72px:('d':p2b(0px,$lh)),
