--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -140,10 +140,10 @@ $base-base-fonts-16: (
       ),
     'georgia': (
       12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh)),
-      16px:('d':p2b(11px,$lh)),
+      14px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
+      16px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
       17px:('d':p2b(10px,$lh)),
-      18px:('d':p2b(10px,$lh)),
+      18px:('d':p2b(10px,$lh), 1.5:p2b(14px, $lh)),
       20px:('d':p2b(9px,$lh), 1.5:p2b(13px,$lh)),
       21px:('d':p2b(9px,$lh)),
       22px:('d':p2b(9px,$lh)),
@@ -152,7 +152,7 @@ $base-base-fonts-16: (
       28px:('d':p2b(6px,$lh)),
       30px:('d':p2b(14px,$lh)),
       32px:('d':p2b(13px,$lh)),
-      34px:('d':p2b(12px,$lh)),
+      34px:('d':p2b(12px,$lh), 2.5:p2b(0px, $lh)),
       36px:('d':p2b(12px,$lh)),
       38px:('d':p2b(11px,$lh)),
       40px:('d':p2b(10px,$lh)),
