--- a/_font-settings-16.scss
+++ b/_font-settings-16.scss
@@ -149,7 +149,7 @@ $base-base-fonts-16: (
       22px:('d':p2b(9px,$lh)),
       24px:('d':p2b(8px,$lh)),
       26px:('d':p2b(7px,$lh)),
-      28px:('d':p2b(6px,$lh)),
+      28px:('d':p2b(6px,$lh), 2.5:p2b(2px,$lh)),
       30px:('d':p2b(14px,$lh)),
       32px:('d':p2b(13px,$lh)),
       34px:('d':p2b(12px,$lh), 2.5:p2b(0px, $lh)),
